Uploading the correct version of the Proxy Server
Apparently I had uploaded the Connection Tester in both the Connection Tester and the Proxy Server directories.

--- a/ProxyServer/ChangeLog
+++ b/ProxyServer/ChangeLog
@@ -1,15 +1,13 @@
-Unity Connection Tester
+Unity Proxy Server
 
 2.0.1f1 (25 Feb 2011)
 
 - (common) Added option for launching to background (daemon mode) on Linux.
 - (common) PID file now written after launch.
-- (common) Launch script for Linux added (start/stop/restart), , see config/unity-conntester.
+- (common) Launch script for Linux added (start/stop/restart), see config/unity-proxyserver.
 - (common) Command line parameters modified to match the other servers.
 - (common) All servers now use same logging facility
-- RakNet fix for when NAT detection sometimes reported Port Restricted when it was actually Full 
-  Cone or Address Restricted (revision 133).
-- RakNet fix for GetTime not being thread safe which sometimes caused disconnections on Linux (revision 130).
+- Problem when parsing server proxied RPC messages fixed.
 
 2.0.0f1 (22 Sep 2011)
 
